Customizing to JT portfolio

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Moscow - Personal Portfolio</title>
+    <title>SDET - Automation Architect</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
 
@@ -40,11 +40,11 @@
                             <div class="selector uppercase" id="selector">
                                 <h3 class="ah-headline p-none m-none">
                                     <span class="font-weight-400">Hi There ! I'm</span>
-									<span class="my-name">Linda Smith</span>
+									<span class="my-name">Joshua Tolbert</span>
                                     <span class="ah-words-wrapper">
-										<b class="is-visible">web designer</b>
-										<b>developer</b>
-										<b>blogger</b>
+										<b class="is-visible">QA Engineer</b>
+										<b>SDET</b>
+										<b>Automation Architect</b>
 									</span>
                                 </h3>
                             </div>
@@ -100,8 +100,8 @@
 								</div>
                                 <div class="col s12 m12 l6 p-none">
                                     <ul class="second-font list-1">
-                                        <li><span class="font-weight-700">First Name: </span>Linda</li>
-                                        <li><span class="font-weight-700">Last Name: </span>Smith</li>
+                                        <li><span class="font-weight-700">First Name: </span>Joshua</li>
+                                        <li><span class="font-weight-700">Last Name: </span>Tolbert</li>
                                         <li><span class="font-weight-700">Date of birth: </span>21 june 1990 </li>
                                         <li><span class="font-weight-700">Nationality: </span>Russian</li>
 										<li><span class="font-weight-700">Freelance: </span>Available</li>
