Software Development Engineer In Test to Software Developer In Test

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 									<span class="my-name">Joshua Tolbert</span>
                                     <span class="ah-words-wrapper">
 										<b class="is-visible">QA Engineer</b>
-										<b>Software Development Engineer In Test</b>
+										<b>Software Developer In Test</b>
 										<b>Automation Architect</b>
 									</span>
                                 </h3>
