--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div class="row">
 							<!-- Picture Starts -->
                             <div class="col s12 m4 profile-picture show-on-medium-and-down section-padding">
-								<img src="http://via.placeholder.com/594x1032" class="responsive-img my-picture" alt="My Photo">
+								<img src="https://via.placeholder.com/594x1032" class="responsive-img my-picture" alt="My Photo">
                             </div>
 							<!-- Picture Ends -->
                             <div class="col s12 m8 l12 xl12 personal-info section-padding">
@@ -400,7 +400,7 @@
                             <!-- Project Starts -->
                             <div class="col s12 m6 l6 xl4" data-panel="panel-1">
                                 <a href="#">
-									<img class="responsive-img" src="http://via.placeholder.com/535x400" alt="Project" />
+									<img class="responsive-img" src="https://via.placeholder.com/535x400" alt="Project" />
 									<div class="valign-wrapper"><span class="font-weight-700 uppercase">Image Project</span></div>
 								</a>
                             </div>
@@ -408,7 +408,7 @@
                             <!-- Project Starts -->
                             <div class="col s12 m6 l6 xl4" data-panel="panel-2">
                                 <a href="#">
-									<img class="responsive-img" src="http://via.placeholder.com/535x400" alt="Project" />
+									<img class="responsive-img" src="https://via.placeholder.com/535x400" alt="Project" />
 									<div class="valign-wrapper"><span class="font-weight-700 uppercase">Slider Project</span></div>
 								</a>
                             </div>
@@ -416,7 +416,7 @@
                             <!-- Project Starts -->
                             <div class="col s12 m6 l6 xl4" data-panel="panel-3">
                                 <a href="#">
-									<img class="responsive-img" src="http://via.placeholder.com/535x400" alt="Project" />
+									<img class="responsive-img" src="https://via.placeholder.com/535x400" alt="Project" />
 									<div class="valign-wrapper"><span class="font-weight-700 uppercase">Youtube Video</span></div>
 								</a>
                             </div>
@@ -424,7 +424,7 @@
                             <!-- Project Starts -->
                             <div class="col s12 m6 l6 xl4" data-panel="panel-4">
                                 <a href="#">
-									<img class="responsive-img" src="http://via.placeholder.com/535x400" alt="Project" />
+									<img class="responsive-img" src="https://via.placeholder.com/535x400" alt="Project" />
 									<div class="valign-wrapper"><span class="font-weight-700 uppercase">Local Video</span></div>
 								</a>
                             </div>
@@ -432,7 +432,7 @@
                             <!-- Project Starts -->
                             <div class="col s12 m6 l6 xl4" data-panel="panel-5">
                                 <a href="#">
-									<img class="responsive-img" src="http://via.placeholder.com/535x400" alt="Project" />
+									<img class="responsive-img" src="https://via.placeholder.com/535x400" alt="Project" />
 									<div class="valign-wrapper"><span class="font-weight-700 uppercase">Image Project</span></div>
 								</a>
                             </div>
@@ -440,7 +440,7 @@
                             <!-- Project Starts -->
                             <div class="col s12 m6 l6 xl4" data-panel="panel-6">
                                 <a href="#">
-									<img class="responsive-img" src="http://via.placeholder.com/535x400" alt="Project" />
+									<img class="responsive-img" src="https://via.placeholder.com/535x400" alt="Project" />
 									<div class="valign-wrapper"><span class="font-weight-700 uppercase">Image Project</span></div>
 								</a>
                             </div>
@@ -448,7 +448,7 @@
                             <!-- Project Starts -->
                             <div class="col s12 m6 l6 xl4" data-panel="panel-7">
                                 <a href="#">
-									<img class="responsive-img" src="http://via.placeholder.com/535x400" alt="Project" />
+									<img class="responsive-img" src="https://via.placeholder.com/535x400" alt="Project" />
 									<div class="valign-wrapper"><span class="font-weight-700 uppercase">Image Project</span></div>
 								</a>
                             </div>
@@ -456,7 +456,7 @@
                             <!-- Project Starts -->
                             <div class="col s12 m6 l6 xl4" data-panel="panel-8">
                                 <a href="#">
-									<img class="responsive-img" src="http://via.placeholder.com/535x400" alt="Project" />
+									<img class="responsive-img" src="https://via.placeholder.com/535x400" alt="Project" />
 									<div class="valign-wrapper"><span class="font-weight-700 uppercase">Image Project</span></div>
 								</a>
                             </div>
@@ -464,7 +464,7 @@
 							<!-- Project Starts -->
                             <div class="col s12 m6 l6 xl4" data-panel="panel-9">
                                 <a href="#">
-									<img class="responsive-img" src="http://via.placeholder.com/535x400" alt="Project" />
+									<img class="responsive-img" src="https://via.placeholder.com/535x400" alt="Project" />
 									<div class="valign-wrapper"><span class="font-weight-700 uppercase">Image Project</span></div>
 								</a>
                             </div>
@@ -589,7 +589,7 @@
                     <div class="row">
                         <!-- Project Main Content Starts -->
                         <div class="col s12 l6 xl6 section-padding section-padding-right-none">
-                            <img class="responsive-img" src="http://via.placeholder.com/535x400" alt="project" />
+                            <img class="responsive-img" src="https://via.placeholder.com/535x400" alt="project" />
                         </div>
                         <!-- Project Main Content Ends -->
                         <!-- Project Details Starts -->
@@ -614,10 +614,10 @@
                         <!-- Project Main Content Starts -->
                         <div class="col s12 l6 xl6 section-padding section-padding-right-none">
                             <div class="carousel carousel-slider">
-                                <a class="carousel-item" href="#one!"><img class="responsive-img" src="http://via.placeholder.com/535x400" alt="project" ></a>
-                                <a class="carousel-item" href="#two!"><img class="responsive-img" src="http://via.placeholder.com/535x400" alt="project" ></a>
-                                <a class="carousel-item" href="#three!"><img class="responsive-img" src="http://via.placeholder.com/535x400" alt="project" ></a>
-                                <a class="carousel-item" href="#four!"><img class="responsive-img" src="http://via.placeholder.com/535x400" alt="project" ></a>
+                                <a class="carousel-item" href="#one!"><img class="responsive-img" src="https://via.placeholder.com/535x400" alt="project" ></a>
+                                <a class="carousel-item" href="#two!"><img class="responsive-img" src="https://via.placeholder.com/535x400" alt="project" ></a>
+                                <a class="carousel-item" href="#three!"><img class="responsive-img" src="https://via.placeholder.com/535x400" alt="project" ></a>
+                                <a class="carousel-item" href="#four!"><img class="responsive-img" src="https://via.placeholder.com/535x400" alt="project" ></a>
                             </div>
                         </div>
                         <!-- Project Main Content Ends -->
@@ -668,7 +668,7 @@
                     <div class="row">
                         <!-- Project Main Content Starts -->
                         <div class="col s12 l6 xl6 section-padding section-padding-right-none">
-                            <video id="video" class="responsive-video" controls poster="http://via.placeholder.com/561x315">
+                            <video id="video" class="responsive-video" controls poster="https://via.placeholder.com/561x315">
 								<source src="images/projects/video/video.mp4" type="video/mp4">
 							</video>
                         </div>
@@ -694,7 +694,7 @@
                     <div class="row">
                         <!-- Project Main Content Starts -->
                         <div class="col s12 l6 xl6 section-padding section-padding-right-none">
-                            <img class="responsive-img" src="http://via.placeholder.com/535x400" alt="project" />
+                            <img class="responsive-img" src="https://via.placeholder.com/535x400" alt="project" />
                         </div>
                         <!-- Project Main Content Ends -->
                         <!-- Project Details Starts -->
@@ -718,7 +718,7 @@
                     <div class="row">
                         <!-- Project Main Content Starts -->
                         <div class="col s12 l6 xl6 section-padding section-padding-right-none">
-                            <img class="responsive-img" src="http://via.placeholder.com/535x400" alt="project" />
+                            <img class="responsive-img" src="https://via.placeholder.com/535x400" alt="project" />
                         </div>
                         <!-- Project Main Content Ends -->
                         <!-- Project Details Starts -->
@@ -742,7 +742,7 @@
                     <div class="row">
                         <!-- Project Main Content Starts -->
                         <div class="col s12 l6 xl6 section-padding section-padding-right-none">
-                            <img class="responsive-img" src="http://via.placeholder.com/535x400" alt="project" />
+                            <img class="responsive-img" src="https://via.placeholder.com/535x400" alt="project" />
                         </div>
                         <!-- Project Main Content Ends -->
                         <!-- Project Details Starts -->
@@ -766,7 +766,7 @@
                     <div class="row">
                         <!-- Project Main Content Starts -->
                         <div class="col s12 l6 xl6 section-padding section-padding-right-none">
-                            <img class="responsive-img" src="http://via.placeholder.com/535x400" alt="project" />
+                            <img class="responsive-img" src="https://via.placeholder.com/535x400" alt="project" />
                         </div>
                         <!-- Project Main Content Ends -->
                         <!-- Project Details Starts -->
@@ -790,7 +790,7 @@
                     <div class="row">
                         <!-- Project Main Content Starts -->
                         <div class="col s12 l6 xl6 section-padding section-padding-right-none">
-                            <img class="responsive-img" src="http://via.placeholder.com/535x400" alt="project" />
+                            <img class="responsive-img" src="https://via.placeholder.com/535x400" alt="project" />
                         </div>
                         <!-- Project Main Content Ends -->
                         <!-- Project Details Starts -->
