--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div class="row">
 							<!-- Picture Starts -->
                             <div class="col s12 m4 profile-picture show-on-medium-and-down section-padding">
-								<img src="https://via.placeholder.com/594x1032" class="responsive-img my-picture" alt="My Photo">
+								<img src="https://picsum.photos/id/0/594/1032" class="responsive-img my-picture" alt="My Photo">
                             </div>
 							<!-- Picture Ends -->
                             <div class="col s12 m8 l12 xl12 personal-info section-padding">
