--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 									<span class="my-name">Joshua Tolbert</span>
                                     <span class="ah-words-wrapper">
 										<b class="is-visible">QA Test Engineer</b>
-										<b>SDET</b>
+										<b>Full Stack SDET</b>
 										<b>Automation Architect</b>
 									</span>
                                 </h3>
