Added blogs - changed content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>SDET - Automation Architect</title>
+    <title>SDET - Certifed AWS Devops Enginer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
 
@@ -42,9 +42,9 @@
                                     <span class="font-weight-400">Hi There ! I'm</span>
 									<span class="my-name">Joshua Tolbert</span>
                                     <span class="ah-words-wrapper">
-										<b class="is-visible">QA Test Engineer</b>
-										<b>Full Stack SDET</b>
-										<b>Automation Architect</b>
+										<b class="is-visible">Devops Engineer</b>
+										<b>Devops Architect</b>
+										<b>AWS Certifed Devops Engineer</b>
 									</span>
                                 </h3>
                             </div>
