--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Certifed AWS Devops Enginer</title>
+    <title>Certifed AWS Devops Engineer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
 
@@ -44,7 +44,7 @@
                                     <span class="ah-words-wrapper">
 										<b class="is-visible">Devops Engineer</b>
 										<b>Devops Architect</b>
-										<b>AWS Certifed Devops Engineer</b>
+										<b>Certifed AWS Devops Engineer</b>
 									</span>
                                 </h3>
                             </div>
