--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                     <span class="ah-words-wrapper">
 										<b class="is-visible">Devops Engineer</b>
 										<b>Devops Architect</b>
-										<b>Certified AWS Devops Engineer</b>
+										<b> AWS Certified </b>
 									</span>
                                 </h3>
                             </div>
